--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "pm2": "^5.1.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "swagger-autogen": "^2.13.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
