--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.0",
     "pm2": "^5.1.2",
     "request": "^2.88.2",
     "swagger-autogen": "^2.13.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
