--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "https": "^1.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
